feat client zod code from open api yaml
