# apps/system/api/schema/openapi/oas_validators_gen.go
@@ -1,43 +1,0 @@
-// Code generated by ogen, DO NOT EDIT.
-
-package openapi
-
-import (
-	"github.com/go-faster/errors"
-
-	"github.com/ogen-go/ogen/validate"
-)
-
-func (s *HealthGetOK) Validate() error {
-	if s == nil {
-		return validate.ErrNilPointer
-	}
-
-	var failures []validate.FieldError
-	if err := func() error {
-		if err := s.Status.Validate(); err != nil {
-			return err
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "status",
-			Error: err,
-		})
-	}
-	if len(failures) > 0 {
-		return &validate.Error{Fields: failures}
-	}
-	return nil
-}
-
-func (s HealthGetOKStatus) Validate() error {
-	switch s {
-	case "healthy":
-		return nil
-	case "unhealthy":
-		return nil
-	default:
-		return errors.Errorf("invalid value: %v", s)
-	}
-}
